--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -14,7 +14,7 @@
       <div class="card shadow-sm h-100">
         <div class="card-body">
           <h5 class="card-title">Courses</h5>
-          <a href="#" class="btn btn-primary btn-sm me-2">Visit Course List</a>
+          <a href="{% url 'course-list' %}" class="btn btn-primary btn-sm me-2">Visit Course List</a>
         </div>
       </div>
     </div>
